<resources>
    <string name="app_name">RotationControl</string>
    <string name="description">Force rotation for selected packages</string>
    <string name="title_activity_settings">RotationControl Configuration</string>
    <string name="category_rotation_mode">Forced Rotation Mode</string>
    <string name="screen_orientation_unset_title">UNSET</string>
    <string name="screen_orientation_unset_summary">Do not override screen orientation. Use this option if you only want to use the rewrite functionality above.</string>
    <string name="screen_orientation_unspecified_title">UNSPECIFIED</string>
    <string name="screen_orientation_unspecified_summary">No preference specified: let the system decide the best orientation. This will either be the orientation selected by the activity below, or the user\'s preferred orientation if this activity is the bottom of a task. If the user explicitly turned off sensor based orientation through settings sensor based device rotation will be ignored. If not by default sensor based orientation will be taken into account and the orientation will changed based on how the user rotates the device.</string>
    <string name="screen_orientation_landscape_title">LANDSCAPE</string>
    <string name="screen_orientation_landscape_summary">Would like to have the screen in a landscape orientation: that is, with the display wider than it is tall, ignoring sensor data.</string>
    <string name="screen_orientation_portrait_title">PORTRAIT</string>
    <string name="screen_orientation_portrait_summary">Would like to have the screen in a portrait orientation: that is, with the display taller than it is wide, ignoring sensor data.</string>
    <string name="screen_orientation_user_title">USER</string>
    <string name="screen_orientation_user_summary">Use the user\'s current preferred orientation of the handset.</string>
    <string name="screen_orientation_behind_title">BEHIND</string>
    <string name="screen_orientation_behind_summary">Keep the screen in the same orientation as whatever is behind this activity.</string>
    <string name="screen_orientation_sensor_title">SENSOR</string>
    <string name="screen_orientation_sensor_summary">Orientation is determined by a physical orientation sensor: the display will rotate based on how the user moves the device. Ignores user\'s setting to turn off sensor-based rotation.</string>
    <string name="screen_orientation_nosensor_title">NOSENSOR</string>
    <string name="screen_orientation_nosensor_summary">Always ignore orientation determined by orientation sensor: the display will not rotate when the user moves the device.</string>
    <string name="screen_orientation_sensor_landscape_title">SENSOR_LANDSCAPE</string>
    <string name="screen_orientation_sensor_landscape_summary">"Would like to have the screen in landscape orientation, but can use the sensor to change which direction the screen is facing. "</string>
    <string name="screen_orientation_sensor_portrait_title">SENSOR_PORTRAIT</string>
    <string name="screen_orientation_sensor_portrait_summary">Would like to have the screen in portrait orientation, but can use the sensor to change which direction the screen is facing.</string>
    <string name="screen_orientation_reverse_landscape_title">REVERSE_LANDSCAPE</string>
    <string name="screen_orientation_reverse_landscape_summary">Would like to have the screen in landscape orientation, turned in the opposite direction from normal landscape.</string>
    <string name="screen_orientation_reverse_portrait_title">REVERSE_PORTRAIT</string>
    <string name="screen_orientation_reverse_portrait_summary">Would like to have the screen in portrait orientation, turned in the opposite direction from normal portrait.</string>
    <string name="screen_orientation_full_sensor_title">FULL_SENSOR</string>
    <string name="screen_orientation_full_sensor_summary">Orientation is determined by a physical orientation sensor: the display will rotate based on how the user moves the device. This allows any of the 4 possible rotations, regardless of what the device will normally do (for example some devices won\'t normally use 180 degree rotation).</string>
    <string name="screen_orientation_user_landscape">USER_LANDSCAPE</string>
    <string name="screen_orientation_user_landscape_summary">Would like to have the screen in landscape orientation, but if the user has enabled sensor-based rotation then we can use the sensor to change which direction the screen is facing.</string>
    <string name="screen_orientation_user_portrait_title">USER_PORTRAIT</string>
    <string name="screen_orientation_user_portrait_summary">Would like to have the screen in portrait orientation, but if the user has enabled sensor-based rotation then we can use the sensor to change which direction the screen is facing.</string>
    <string name="screen_orientation_full_user_title">FULL_USER</string>
    <string name="screen_orientation_full_user_summary">Respect the user\'s sensor-based rotation preference, but if sensor-based rotation is enabled then allow the screen to rotate in all 4 possible directions regardless of what the device will normally do (for example some devices won\'t normally use 180 degree rotation).</string>
    <string name="screen_orientation_locked_title">LOCKED</string>
    <string name="screen_orientation_locked_summary">Screen is locked to its current rotation, whatever that is.</string>
    <string name="rewrite_locked_orientations_title">Rewrite to sensor orientation</string>
    <string name="rewrite_locked_orientations_summary">Rewrite locked orientations to sensor orientations.</string>
    <string name="rewrite_sensor_orientation_title">Force full sensor rotation</string>
    <string name="rewrite_sensor_orientations_summary">Rewrite sensor orientations to full sensor orientations.</string>
    <string name="category_rewrite">Rewrite Options</string>
</resources>
